Turn into a proper package using poetry

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
-cred.py
-__pycache__/
-venv/
+/.vscode/
+*.code-workspace
+/*sandbox*.py
+/config*.yaml
+
+# testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Python bytecode, eggs, build and dist, ...
+*.pyc
+src/*.egg-info/
+/build/
+/dist/
+
+# documentation (auto-generated and build results)
+docs/build/
+
+# virtualenv
+/.venv/
