--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,11 @@ repository = "https://github.com/ehrenfeu/prometheus-hass-sun2k"
 
 [tool.poetry.dependencies]
 click = "^8.1.7"
+loguru = "^0.7.2"
 prometheus-client = "^0.20.0"
 python = "^3.8"
 python-box = "^7.1.1"
+pyyaml = "^6.0.1"
 requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
