--- a/src/prometheus_hass_sun2k/resources/config-example.yaml
+++ b/src/prometheus_hass_sun2k/resources/config-example.yaml
@@ -1,3 +1,5 @@
+verbosity: 0 # 0=WARN, 1=INFO, 2=DEBUG, 3=TRACE
+
 listen: # IP and port for the exporter to listen on
   addr: "192.168.3.4"
   port: 9177
