--- a/src/prometheus_hass_sun2k/resources/systemd/prometheus-hass-sun2k.service
+++ b/src/prometheus_hass_sun2k/resources/systemd/prometheus-hass-sun2k.service
@@ -5,7 +5,7 @@ Description=Prometheus exporter for HomeAssistant data on Huawei SUN2000 inverte
 
 
 [Service]
-ExecStart=/opt/prometheus-hass-sun2k/bin/prometheus-hass-sun2k
+ExecStart=/opt/prometheus-hass-sun2k/bin/prometheus-hass-sun2k --config /opt/prometheus-hass-sun2k/config.yaml
 Type=simple
 User=has2k-exporter
 Restart=on-failure
